# aws-news

./: .gitignore  CHANGELOG.MD  README.md  generated.txt  index.json  pyproject.toml
.github/workflow/: publish.yml
.github/workflows/: publish.yml  release.yml
aws-news-crawler/: README.md  pyproject.toml  rss_config.json
aws-news-crawler/aws_news_crawler/: __init__.py  table.py
news/: architecture.json  aws_marketplace.json  aws_news.json  aws_partner_network.json  big_data.json  business_productivity.json  compute.json  contact_center.json  containers.json  database.json  desktop_and_application_streaming.json  developer.json  devops.json  enterprise_strategy.json  front-end_web_mobile.json  game_tech.json  hpc.json  industries.json  infra_and_automation.json  internet_of_things.json  machine_learning.json  media.json  messaging_and_targeting.json  networking_and_content_delivery.json  open_source.json  public_sector.json  quantum_computing.json  robotics.json  sap.json  security_identity_complience.json  startups.json  storage.json  training_certification.json  windows_on_aws.json
