[tool.poetry]
package-mode = false
name = "aws-news"
version = "0.1.0"
description = ""
authors = ["Roman Tsypuk <tsypuk.conf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
git-changelog = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
